# challenge-backend-2024-fastapi

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: config.py  exceptions.py  face_recognition.py  main.py
src/database/: __init__.py  database.py
src/models/: __init__.py  schemas.py
src/repository/: repository.py
src/routes/: __init__.py
src/routes/v1/: __init__.py  device_groups.py  devices.py  employees.py  enroll.py  punch.py  timecards.py  token.py
src/schemas/: schemas.py
tests/: test_bonus_rules.py  test_break_rules.py  test_combination_rules.py  test_credit_holiday_rules.py  test_device_groups.py  test_devices.py  test_employees.py  test_exception_rules.py  test_fixed_rules.py  test_holiday.py  test_interpretation_rule.py  test_overtime_rules.py  test_pay_rules.py  test_paycode.py  test_paycodes_combinations.py  test_paycodes_distribution.py  test_rounding_rules.py  test_schedule_desviation_rule.py  test_work_rule.py  test_zones.py
