[tool.poetry]
description = "API for face recognition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = "0.28.1"
sqlalchemy = "2.0.28"
psycopg2-binary = "2.9.9"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
python-multipart = "0.0.9"
face-recognition = "1.3.0"
pytz = "2024.1"

[tool.poetry.group.dev.dependencies]
faker = "24.3.0"
pytest = "8.1.1"
pytest-dotenv = "0.5.2"
tox = "4.14.2"
coverage = "7.4.4"
black = "24.3.0"
pylint = "3.1.0"
mypy = "1.9.0"
autoflake = "2.3.1"
isort = "5.13.2"
flake8 = "7.0.0"
httpx = "0.27.0"
poethepoet = "^0.25.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
    ".",
]
env_files = [
    ".env"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# List of multiple useful commands to run app or tests locally
[tool.poe.tasks]
fastapi-local = "uvicorn src.main:app --reload"
fastapi-docker-up = "docker-compose up --build"
fastapi-docker-down = "docker-compose down"
black-format = "black ."
black-check = "black . --check --diff -v"
test-unit = ["_test_unit", "_coverage_html"]
_test_unit = "coverage run -m pytest tests"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = false
